[package]
name = "example"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc4", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

ink-babe-random = { version = "0.1.0", path = "..", default-features = false}

[lib]
name = "example"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "ink-babe-random/std"
]
ink-as-dependency = []
